# security-infra

./: .gitignore  README.html  README.md  ca.crt  cert.json  chain.crt  docker-compose copy.yml  docker-compose.yml  pyproject.toml  requirements.txt  security-infra-cli.py  setup.py  vault.crt  vault.key
README_files/libs/bootstrap/: bootstrap-97e88c4f3c76444aa0076d995ae42204.min.css
bitwarden/bwdata/: config.yml
bitwarden/bwdata/core/aspnet-dataprotection/: key-7708a266-6896-4a90-80f2-ba73ba45e2f3.xml
bitwarden/bwdata/env/: global.override.env  mssql.override.env
bitwarden/bwdata/identity/: identity.pfx
bitwarden/bwdata/mssql/data/: mastlog.ldf  model_msdblog.ldf  model_replicatedmaster.ldf  msdblog.ldf
bitwarden/bwdata/nginx/: default.conf
bitwarden/bwdata/ssl/self/bitwarden.local/: certificate.crt  private.key
bitwarden/bwdata/web/: app-id.json
config/: config.yml  permissions.yml
logger/: __init__.py  logger.py
policies/: pseudonymize-approle-policy.hcl
scripts/: chmod_v.sh  setup_infra copy.sh  setup_infra.sh  setup_vault.sh  setup_vault_dirs.sh  test_usb_detect.py  vault_auto_unseal.py
src/security_infra/: auto_unseal copy.py  auto_unseal.py  compose_manager.py  config_loader.py  create_directories.py  debug_vault_token.py  generate_certificates.py  pseudonymize_vault_reader.py  set_permissions copy.py  sync_templates.py  usb_utils.py
templates/bitwarden/: docker-compose.override.yml
templates/elk/: logstash.conf
templates/vault/: config.hcl  docker-compose.yml  vault.hcl
tests/: test_cli.py  test_config_loader.py
