[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "security-infra"
version = "0.1.0"
description = "의료데이터 보안인프라 플랫폼"
authors = [
    { name="BenKorea", email="benkorea.ai@gamil.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9",
    "pytest",
    # 여기에 필요한 패키지 계속 추가
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    # 개발용 패키지 추가
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
